# libdivecomputer-capacitor

./: LibDiveComputerPlugin.podspec  Package.swift  README.md  copy-plugin-files.js  lib-dive-computer-plugin-1.0.12.tgz  lib-dive-computer-plugin-1.0.2.tgz  package-lock.json  package.json  plugin.xml  rollup.config.mjs
android/: build.gradle  capacitor.settings.gradle
android/app/: capacitor.build.gradle
android/src/main/cpp/libdc/include/: Makefile
android/src/main/java/it/immersea/libdivecomputerplugin/: LibDiveComputerPlugin.java  LibDiveComputerPluginBridge.java  libdc.java  libdcPlugin.java
android/src/main/jniLibs/arm64-v8a/include/libdivecomputer/: version.h
android_old/: build.gradle  settings.gradle  variables.gradle
android_old/app/: capacitor.build.gradle
android_old/app/src/main/assets/: capacitor.plugins.json
android_old/src/main/cpp/: CMakeLists.txt  libdivecomputer_jni.cpp
android_old/src/main/cpp/libdc/include/: Makefile.in
android_old/src/main/jniLibs/arm64-v8a/include/libdivecomputer/: Makefile  common.h
example-app/: package.json
example-app/android/: capacitor.settings.gradle
example-app/ios/App/: Podfile
example-app/src/js/: example.js
ios/App/App/: capacitor.config.json
ios/Sources/LibDiveComputerPlugin/: LibDiveComputerWrapper.h  LibDiveComputerWrapper.m
ios/Sources/libdcPlugin/: libdc.swift  libdcPlugin.swift
ios/Tests/libdcPluginTests/: libdcPluginTests.swift
src/: definitions.ts  index.ts  web.ts
